Prevents the body from scrolling when mobile nav visible.
Closes #106

--- a/assets/stylesheets/base.scss
+++ b/assets/stylesheets/base.scss
@@ -47,4 +47,7 @@ body {
   @media (min-width: 800px) {
     border: 10px solid $white;
   }
+  &.mobile-nav-is-showing {
+    overflow: hidden;
+  }
 }
